[package]
name = "github-readme-server"
version = "0.1.0"
authors = ["Max Gonzih <gonzih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.1"
# serde_json = "1.0.48"
# serde = "1.0.104"
# serde_derive = "1.0.104"
# crabquery = "0.1.4"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = [] }
comrak = "0.7"
# syntect = "3.3"
markup = "0.4.1"
